--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -35,11 +35,27 @@
   div.gallery-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
   }
 
   a.photo-container {
     display: flex;
+    flex: 33%;
+    max-width: 33%;
+  }
+
+  @media screen and (max-width: 600px) {
+    a.photo-container {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 300px) {
+    a.photo-container {
+      flex: 100%;
+      max-width: 100%;
+    }
   }
 </style>
 
