scaling down photos for web

--- a/templates/gallery_image.html
+++ b/templates/gallery_image.html
@@ -56,7 +56,7 @@
           </li>
 
           <li>
-            <a href="media/{{ found.image.filename }}" target="_blank">hi-res</a>
+            <a href="full/{{ found.image.filename }}" target="_blank">hi-res</a>
           </li>
         </ul>
       </details>
