--- a/templates/gallery_image.html
+++ b/templates/gallery_image.html
@@ -24,45 +24,47 @@
       <span>&gt;</span>
       {% endif %}
     </header>
-    <div>
+    <main style="display: flex; flex-direction: column; align-items: center;">
       <img id="photo" src="media/{{ found.image.filename }}" />
-      <div style="display: flex; justify-content: space-between; gap: 3rem;">
-        {% match found.image.title %}
-        {% when Some with (title) %}
-        <span>{{title}}</span>
-        {% when None %}
-        {% endmatch %}
-        <!--  -->
-        <span style="text-wrap-mode: nowrap;">{{found.image.timestamp.date()}}</span>
+      <div style="min-width: var(--main-column-width); width: 100%;">
+        <div style="display: flex; justify-content: space-between; gap: 3rem;">
+          {% match found.image.title %}
+          {% when Some with (title) %}
+          <span>{{title}}</span>
+          {% when None %}
+          {% endmatch %}
+          <!--  -->
+          <span style="text-wrap-mode: nowrap;">{{found.image.timestamp.date()}}</span>
+        </div>
+
+        <details class="settings-footer">
+          <summary>extra</summary>
+          <ul>
+            <li>
+              <span style="display: flex; flex-direction: row; gap: 0.5rem; align-items: center;">
+                <label for="gradients-opacity">background opacity</label>
+                <input type="range" id="gradients-opacity" name="gradients" min="0" max="100" value="50"
+                  style="width: 5rem;">
+              </span>
+            </li>
+            <li>
+              <div style="max-width: 700px;">
+                <span>color palette</span>
+                {% for color in found.image.colorpalette %}
+                <span style="background-color: #{{color}};">#{{color}}</span>
+                {% endfor %}
+              </div>
+            </li>
+
+            <li>
+              <a href="full/{{ found.image.filename }}" target="_blank">hi-res</a>
+            </li>
+          </ul>
+        </details>
+
+        {% include "license_footer.html" %}
       </div>
-
-      <details class="settings-footer">
-        <summary>extra</summary>
-        <ul>
-          <li>
-            <span style="display: flex; flex-direction: row; gap: 0.5rem; align-items: center;">
-              <label for="gradients-opacity">background opacity</label>
-              <input type="range" id="gradients-opacity" name="gradients" min="0" max="100" value="50"
-                style="width: 5rem;">
-            </span>
-          </li>
-          <li>
-            <div style="max-width: 700px;">
-              <span>color palette</span>
-              {% for color in found.image.colorpalette %}
-              <span style="background-color: #{{color}};">#{{color}}</span>
-              {% endfor %}
-            </div>
-          </li>
-
-          <li>
-            <a href="full/{{ found.image.filename }}" target="_blank">hi-res</a>
-          </li>
-        </ul>
-      </details>
-
-      {% include "license_footer.html" %}
-    </div>
+    </main>
   </div>
   <!--  -->
   <div id="blobs-container">
