--- a/templates/head_preamble.html
+++ b/templates/head_preamble.html
@@ -1,4 +1,5 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="Igor Vaiman's personal website, portfolio, project collection and playground" />
 <link rel="stylesheet" href="/static/style.css" />
 <link rel="icon" href="/static/favicon.ico" />
