--- a/templates/project.html
+++ b/templates/project.html
@@ -3,7 +3,7 @@
 
 <head>
   {% include "head_preamble.html" %}
-  <title>nj-vs-vh | {{ project.metadata.title }}</title>
+  <title>{{ project.metadata.title }} | nj-vs-vh</title>
   <!-- highligh.js setup -->
   {% if project.metadata.code_languages.len() > 0 %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
