--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% include "head_preamble.html" %}
-    <title>nj-vs-vh | projects</title>
+    <title>projects | nj-vs-vh</title>
   </head>
   <body>
     {% match tag_filter %} {% when Some with (tag_filter) %}
