--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -3,7 +3,7 @@
 
 <head>
   {% include "head_preamble.html" %}
-  <title>nj-vs-vh page | gallery</title>
+  <title>gallery | nj-vs-vh page</title>
   <meta name="description" content="Gallery" />
 </head>
 
