--- a/templates/music.html
+++ b/templates/music.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% include "head_preamble.html" %}
-    <title>nj-vs-vh | music</title>
+    <title>music | nj-vs-vh</title>
   </head>
   <body>
     <header><a href="/">home</a> /</header>
